  instead of titles. Titles for these lists is obsolete and might stop working soon.
* Added prop=imageinfo - gets image properties and upload history
* (bug 10211) Added db server replication lag information in meta=siteinfo
* Added external url search within wiki pages (list=exturlusage)
* Added link enumeration (list=alllinks)
* Added registered users enumeration (list=allusers)

== Maintenance script changes since 1.10 ==

* Add support for wgMaxTocLevel option in parserTests
* (bug 6823) Disable article view counter in maintenance/dumpHTML.php
* Fix maintenance/importImages.php so it doesn't barf PHP errors when no
  suitable files are found, and make the list of extensions an option (defaults
  to $wgFileExtensions)
* Add option to maintenance/createAndPromote.php to give the user bureaucrat
  permissions (--bureaucrat)
* Allow overwriting existing files with a conflicting name using
  maintenance/importImages.php

== Languages updated since 1.10 ==

* Afrikaans (af)
* Arabic (ar)
* Bulgarian (bg)
* Catalan (ca)
* Danish (da)
* German (de)
* Greek (el)
* Spanish (es)
* Farsi (fa)
* Finnish (fi)
* Võro (fiu-vro)
* French (fr)
* Galician (gl)
* Hakka (hak)
* Hebrew (he)
* Indonesian (id)
* Italian (it)
* Japanese (ja)
* Georgian (ka)
* Kabyle (kab)
* Kazakh (kk)
* Kurdish (ku)
* Latin (la)
* Lithuanian (lt)
* Malayalam (ml)
* Burmese (my)
* Dutch (nl)
* Norwegian (no)
* Polish (pl)
* Piedmontese (pms)
* Portuguese (pt)
* Romanian (ro)
* Aromanian (roa-rup)
* Russian (ru)
* Slovak (sk)
* Slovenian (sl)
* Shona (sn)
* Somali (so)
* Albanian (sq)
* Sundanese (su)
* Swedish (sv)
* Thai (th)
* Tigrinya (ti)
* Volapük (vo)
* Old Chinese / Late Middle Chinese (zh-classical)
* Chinese (PRC) (zh-cn)
* Chinese (Taiwan) (zh-tw)
* Cantonese (zh-yue)

== Compatibility ==

MediaWiki 1.11 requires PHP 5 (5.1 recommended). PHP 4 is no longer supported.

PHP 5.0.x fails on 64-bit systems due to serious bugs with array processing:
http://bugs.php.net/bug.php?id=34879